# world.github.io

./: .gitignore  .hintrc  IOS_WEBGPU_UPDATE.md  README.md  WGPU_FIX_ATTEMPTS.md  WGPU_UPGRADE_ANALYSIS.md  WGPU_UPGRADE_SUMMARY.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
.github/workflows/: astro.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: OPTIMIZATION_REVIEW_PLAN.md  current_sprint.txt  optimization-opportunities-summary.md  optimization-review-prd.txt  prd.txt
.taskmaster/tasks/: tasks.json
optimization_reports/: FINAL_COMPREHENSIVE_REPORT.md  Future_ideas.md  phase1_architecture.md  phase2_js_performance.md  phase3_wasm_performance.md  phases_4_5_mobile_network.md  phases_6_7_quality_security.md  tasks_optimization.md  tasks_optimization_a.md  tasks_optimization_b.md  tiered_optimization.md
public/: manifest.json  sw.js
public/js/: interaction-raycast.js  orbit-camera.js
public/models/: CPORTAL2.glb  PORTAL.glb  PORTAL2.glb  versuchA.glb
public/wasm/: rust_light_web_engine.wasm
src/: Cargo.toml  cargo.toml  env.d.ts  lib.rs  renderer.rs  resources.rs  shader.wgsl  state.rs  sw.js  uniforms.rs
src/.cargo/: config.toml
src/components/: IamfPlayer.astro  ImmersiveScene.tsx  Renderer.astro
src/layouts/: Layout.astro
src/lib/stores/: audioStore.ts  deviceStore.ts  index.ts  sceneStore.ts  timeStore.ts
src/pages/: index.astro
src/pkg/: model_renderer_gl.js
src/stores/: audioStore.ts  sceneStore.ts
src/styles/: global.css
src/workers/: image-decoder.worker.ts
