[package]
name = "model_renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }

js-sys = "0.3.69"

# WASM (Exakt aufeinander abgestimmte Versionen)
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "console",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuTextureFormat",
    "GpuBuffer",
    "GpuRenderPipeline",
    "Performance",
    "ImageBitmap",
    "Blob",
    "BlobPropertyBag",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "ImageData",
    "CanvasRenderingContext2d"
]}

# WebGPU/WGPU-Rendering
wgpu = { version = "0.20.0", features = ["webgl", "spirv"] } # Stable and compatible with web-sys 0.3.82

# 3D-Mathematik
glam = { version = "0.28.0", features = ["bytemuck"] }

# GLTF/GLB-Parsing
gltf = { version = "1.4.1", features = ["default", "import", "KHR_lights_punctual"] }

# Async Messaging
flume = "0.11.0"

# Sicherer Umgang mit Puffern
bytemuck = { version = "1.16.0", features = ["derive"] }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"     # Optimize for size (critical for web load times)
lto = thin          # Link Time Optimization (cross-module inlining)
codegen-units = 1   # Slower build, faster binary
panic = "abort"     # Remove panic unwinding strings
strip = true        # Remove symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = false      # try updating your wasm-bindgen version in Cargo.toml (currently 0.2.92) or installing a newer version of wasm-pack to see if that resolves the error later.